// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventPlanViewer snapshots > renders the post-approval "Approved · wiring N events…" header 1`] = `
" Approved · wiring 2 events…

 ○ Project Created — Fires after successful project provisioning.
 ○ SDK Initialized"
`;

exports[`EventPlanViewer snapshots > renders the waiting state before any events are proposed 1`] = `
" Event plan

 Waiting for the agent to propose events..."
`;

exports[`EventPlanViewer snapshots > renders visible events and skips blank names (pending approval) 1`] = `
" Event plan (2 events) · awaiting your approval

 ○ Project Created — Fires after successful project provisioning.
 ○ SDK Initialized"
`;
